--- a/core-bundle/contao/languages/my/tl_install.xlf
+++ b/core-bundle/contao/languages/my/tl_install.xlf
@@ -243,6 +243,7 @@
       </trans-unit>
       <trans-unit id="tl_install.repOverride">
         <source>Override the repository tables</source>
+        <target>ကုဒ်တိုက်စားပွဲများကိုအသစ်ပြင်ရေး</target>
       </trans-unit>
       <trans-unit id="tl_install.importSave">
         <source>Import template</source>
