--- a/core-bundle/contao/languages/en/default.xlf
+++ b/core-bundle/contao/languages/en/default.xlf
@@ -770,11 +770,17 @@
       <trans-unit id="MSC.box.1">
         <source>The shorter side of the image is adjusted to the given dimensions and the image is resized proportionally.</source>
       </trans-unit>
-      <trans-unit id="MSC.crop.0">
+      <trans-unit id="MSC.exact.0">
         <source>Exact dimensions</source>
       </trans-unit>
-      <trans-unit id="MSC.crop.1">
+      <trans-unit id="MSC.exact.1">
         <source>The image will be resized to the given dimensions. If necessary, it will be cropped.</source>
+      </trans-unit>
+      <trans-unit id="MSC.crop.0">
+        <source>Crop</source>
+      </trans-unit>
+      <trans-unit id="MSC.crop.1">
+        <source>Preserves the important part (specified in the file manager) of an image.</source>
       </trans-unit>
       <trans-unit id="MSC.left_top.0">
         <source>Left | Top</source>
