--- a/comments-bundle/src/Resources/contao/languages/fa/tl_comments.xlf
+++ b/comments-bundle/src/Resources/contao/languages/fa/tl_comments.xlf
@@ -11,7 +11,7 @@
       </trans-unit>
       <trans-unit id="tl_comments.parent.0">
         <source>Parent ID</source>
-        <target>شناسه ID والد</target>
+        <target>شناسه والد</target>
       </trans-unit>
       <trans-unit id="tl_comments.parent.1">
         <source>The associated record.</source>
@@ -23,7 +23,7 @@
       </trans-unit>
       <trans-unit id="tl_comments.date.1">
         <source>Please enter the comment date.</source>
-        <target>لطفا تاریخ نظر را وارد نمائید.</target>
+        <target>لطفا تاریخ دیدگاه را وارد نمایید.</target>
       </trans-unit>
       <trans-unit id="tl_comments.name.0">
         <source>Author</source>
@@ -31,31 +31,31 @@
       </trans-unit>
       <trans-unit id="tl_comments.name.1">
         <source>Please enter the author's name.</source>
-        <target>لطفا نام نویسنده را وارد نمائید.</target>
+        <target>لطفا نام نویسنده را وارد نمایید.</target>
       </trans-unit>
       <trans-unit id="tl_comments.email.0">
         <source>E-mail address</source>
-        <target>آدرس پست الکترونیک</target>
+        <target>نشانی ایمیل</target>
       </trans-unit>
       <trans-unit id="tl_comments.email.1">
         <source>The e-mail address will not be published.</source>
-        <target>لطفا آدرس پست الکترونیک را وارد نمائید. (نمایش داده نمی شود)</target>
+        <target>نشانی ایمیل نمایش داده نخواهد شد.</target>
       </trans-unit>
       <trans-unit id="tl_comments.website.0">
         <source>Website</source>
-        <target>وب سایت</target>
+        <target>وب‌سایت</target>
       </trans-unit>
       <trans-unit id="tl_comments.website.1">
         <source>Here you can enter a website address.</source>
-        <target>لطفا آدرس وب سایت دلخواه وارد نمائید.</target>
+        <target>اینجا می‌توانید نشانی وب‌سایت را وارد نمایید.</target>
       </trans-unit>
       <trans-unit id="tl_comments.comment.0">
         <source>Comment</source>
-        <target>نظر</target>
+        <target>دیدگاه</target>
       </trans-unit>
       <trans-unit id="tl_comments.comment.1">
         <source>Please enter the comment.</source>
-        <target>لطفا نظر را وارد نمائید.</target>
+        <target>لطفا دیدگاه را وارد نمایید.</target>
       </trans-unit>
       <trans-unit id="tl_comments.addReply.0">
         <source>Add a reply</source>
@@ -63,7 +63,7 @@
       </trans-unit>
       <trans-unit id="tl_comments.addReply.1">
         <source>Here you can reply to the comment.</source>
-        <target>اینجا می‌توانید به این نظر پاسخ دهید.</target>
+        <target>اینجا می‌توانید به این دیدگاه پاسخ دهید.</target>
       </trans-unit>
       <trans-unit id="tl_comments.author.0">
         <source>Author</source>
@@ -83,19 +83,19 @@
       </trans-unit>
       <trans-unit id="tl_comments.published.0">
         <source>Publish comment</source>
-        <target>انتشار نظر</target>
+        <target>انتشار دیدگاه</target>
       </trans-unit>
       <trans-unit id="tl_comments.published.1">
         <source>Make the comment publicly visible on the website.</source>
-        <target>تنها نظراتی که منتشر شده باشند در سایت نمایش داده خواهند شد.</target>
+        <target>تنها نظراتی که منتشر شده باشند در وب‌سایت نمایش داده خواهند شد.</target>
       </trans-unit>
       <trans-unit id="tl_comments.ip.0">
         <source>IP address</source>
-        <target>آدرس IP</target>
+        <target>نشانی IP</target>
       </trans-unit>
       <trans-unit id="tl_comments.ip.1">
         <source>The IP address of the author.</source>
-        <target>آدرس IP نویسنده</target>
+        <target>نشانی IP نویسنده</target>
       </trans-unit>
       <trans-unit id="tl_comments.notified.0">
         <source>Notified</source>
@@ -111,7 +111,7 @@
       </trans-unit>
       <trans-unit id="tl_comments.comment_legend">
         <source>Comment</source>
-        <target>نظر</target>
+        <target>دیدگاه</target>
       </trans-unit>
       <trans-unit id="tl_comments.reply_legend">
         <source>Reply</source>
@@ -151,35 +151,35 @@
       </trans-unit>
       <trans-unit id="tl_comments.show.0">
         <source>Comment details</source>
-        <target>جزئیات نظر</target>
+        <target>جزئیات دیدگاه</target>
       </trans-unit>
       <trans-unit id="tl_comments.show.1">
         <source>Show the details of comment ID %s</source>
-        <target>نمایش اطلاعات مربوط به نظر شناسه %s</target>
+        <target>نمایش اطلاعات مربوط به دیدگاه شناسه %s</target>
       </trans-unit>
       <trans-unit id="tl_comments.edit.0">
         <source>Edit comment</source>
-        <target>ویرایش نظر</target>
+        <target>ویرایش دیدگاه</target>
       </trans-unit>
       <trans-unit id="tl_comments.edit.1">
         <source>Edit comment ID %s</source>
-        <target>ویرایش نظر شناسه %s</target>
+        <target>ویرایش دیدگاه شناسه %s</target>
       </trans-unit>
       <trans-unit id="tl_comments.delete.0">
         <source>Delete comment</source>
-        <target>حذف نظر</target>
+        <target>حذف دیدگاه</target>
       </trans-unit>
       <trans-unit id="tl_comments.delete.1">
         <source>Delete comment ID %s</source>
-        <target>حذف نظر شناسه %s</target>
+        <target>حذف دیدگاه شناسه %s</target>
       </trans-unit>
       <trans-unit id="tl_comments.toggle.0">
         <source>Publish/unpublish comment</source>
-        <target>انتشار/عدم انتشار نظر</target>
+        <target>انتشار/عدم انتشار دیدگاه</target>
       </trans-unit>
       <trans-unit id="tl_comments.toggle.1">
         <source>Publish/unpublish comment ID %s</source>
-        <target>انتشار/عدم انتشار نظر شناسه %s</target>
+        <target>انتشار/عدم انتشار دیدگاه شناسه %s</target>
       </trans-unit>
     </body>
   </file>
