--- a/faq-bundle/contao/languages/fa/default.xlf
+++ b/faq-bundle/contao/languages/fa/default.xlf
@@ -3,7 +3,7 @@
     <body>
       <trans-unit id="MSC.faqCreatedBy">
         <source>Last update on %s by %s.</source>
-        <target>آخرین بروزرسانی در %s توسط %s</target>
+        <target>آخرین روزآمدسازی در %s توسط %s</target>
       </trans-unit>
     </body>
   </file>
